--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>todolist by Alireza</title>
   </head>
   <body>
     <div id="root"></div>
